feat: Adding AI Router
